# mantenimientoapp

./: .gitignore  Abrir API Tecnico.cmd  Abrir Gestion Mantenimiento.cmd  cronograma_dump.json  fichas_raw_dump.json  import_cronograma_2026.py  iniciar.bat  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_passwords.py
android_app/: .gitignore  build.gradle  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/kotlin/com/example/mantenimientoapp/: MainActivity.kt  MantenimientoApp.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/data/local/: MaintenanceDatabase.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/data/preferences/: SessionManager.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/data/remote/: ApiClient.kt  ApiService.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/data/repository/: AdminRepositoryImpl.kt  AuthRepositoryImpl.kt  BibliotecaRepositoryImpl.kt  MaintenanceRepositoryImpl.kt  OrdenesRepositoryImpl.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/di/: AppModule.kt  NetworkModule.kt
android_app/app/src/main/kotlin/com/example/mantenimientoapp/domain/repository/: AdminRepository.kt  AuthRepository.kt  BibliotecaRepository.kt  (+2 more)
android_app/app/src/main/kotlin/com/example/mantenimientoapp/utils/: NetworkResult.kt
api/: auth.py  database.py  main.py  models.py
api/routers/: admin.py  alertas.py  biblioteca.py  electricidad.py  ordenes.py
api/static/: app.js  index.html  style.css
mobile/: .flutter-plugins-dependencies  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/lib/: main.dart
mobile/lib/core/: api_client.dart  app_state.dart
mobile/lib/models/: cronograma.dart  equipo.dart  orden.dart  repuesto.dart  tecnico.dart
mobile/lib/screens/: home_screen.dart  login_screen.dart
mobile/lib/screens/admin/: admin_equipos_screen.dart  admin_home.dart  admin_programas_screen.dart  admin_repuestos_screen.dart  admin_tecnicos_screen.dart
mobile/lib/screens/cronograma/: cronograma_screen.dart
mobile/lib/screens/equipos/: equipos_screen.dart
mobile/lib/screens/ordenes/: crear_orden_screen.dart  orden_detail_screen.dart  ordenes_screen.dart
mobile/lib/screens/repuestos/: repuestos_screen.dart
mobile/lib/services/: admin_service.dart  auth_service.dart  biblioteca_service.dart  ordenes_service.dart
mobile/lib/widgets/: app_error.dart  estado_chip.dart
mobile/test/: widget_test.dart
src/gestion_mantenimiento/: __init__.py  config.py  main.py
src/gestion_mantenimiento/data/: models.py  paths.py  repositories.py  schema.py
src/gestion_mantenimiento/services/: app_settings.py  edesur_parser.py  edesur_scraper.py
src/gestion_mantenimiento/ui/: main_window.py  server_console.py  theme.py
tests/: test_api_mobile.py  test_repositories.py  test_schema.py
(+37 files in other folders)
