[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-mantenimiento"
version = "0.1.0"
description = "Aplicacion de escritorio para gestion de mantenimiento de equipos."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<6.11",
  "certifi>=2024.7.4",
  "openpyxl>=3.1,<4",
  "reportlab>=4.2,<5",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "python-jose[cryptography]>=3.3,<4",
  "passlib[bcrypt]>=1.7,<2",
  "bcrypt<4",
  "python-multipart>=0.0.9,<1",
  "pdfplumber>=0.11,<1",
  "playwright>=1.40,<2",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0,<7",
  "ruff>=0.5,<1",
  "pytest>=8.0,<9",
  "httpx>=0.27,<1",
]

[project.scripts]
gestion-mantenimiento = "gestion_mantenimiento.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gestion_mantenimiento.assets" = ["*.xlsx", "*.png", "*.ico", "*.icns"]
